--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">MangaMaGum</string>
+    <string name="search_bar_initial">search by manga\'s name</string>
+    <string name="library">Library</string>
+    <string name="category">Category</string>
+    <string name="favorite">Favorite</string>
 </resources>
