--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="library">Library</string>
     <string name="category">Category</string>
     <string name="favorite">Favorite</string>
+    <string name="no_text">NONE</string>
 </resources>
