--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="favorite">Favorite</string>
     <string name="no_text">NONE</string>
     <string name="no_value">no_value</string>
+    <string name="favorites">Favorites</string>
 </resources>
