--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">MangaMaGum</string>
     <string name="search_bar_initial">search by manga\'s name</string>
     <string name="library">Library</string>
-    <string name="category">Category</string>
+    <string name="search">Search</string>
     <string name="favorite">Favorite</string>
     <string name="no_text">NONE</string>
     <string name="no_value">no_value</string>
