--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MangaMaGum</string>
+    <string name="app_name">Manga Time</string>
     <string name="search_bar_initial">search by manga\'s name</string>
     <string name="library">Library</string>
     <string name="search">Search</string>
