--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="Loading">Loading ...</string>
     <string name="update_done">Update done</string>
     <string name="clear_text"></string>
+    <string name="no_internet">No internet connection</string>
 </resources>
